--- a/src/assets/css/theme1.css
+++ b/src/assets/css/theme1.css
@@ -17,6 +17,8 @@
   --neutral-3: #808080;
   --neutral-4: #313d44; 
   --neutral-5: #1d1c1c;
+
+  --spical-0: rgba(213, 155, 246, 0.6);
 }
 
 :root {
@@ -78,7 +80,7 @@
   --message-atItem: var(--text-alt);
   --message-content: var(--neutral-5);
   --message-volume: var(--neutral-1);
-  --message-progress: var(--basic-1-0);
+  --message-progress: var(--spical-0);
 }
 
 /* atBar */
@@ -95,7 +97,7 @@
 
 /* eachMember */
 :root {
-  --eachMember-hover: var(--basic-0-0);
+  --eachMember-hover: var(--neutral-1);
 }
 
 /* groupSelector */
