--- a/src/assets/css/theme1.css
+++ b/src/assets/css/theme1.css
@@ -21,6 +21,7 @@
 
   --spical-0: rgba(213, 155, 246, 0.6);
   --spical-1: rgba(255, 205, 210, 0.6);
+  --spical-2: rgba(255, 205, 210, 0.1);
 }
 
 :root {
